--- a/css/sty.css
+++ b/css/sty.css
@@ -1,69 +1,3 @@
-.toggles [type=checkbox] + label {
-  display: block;
-  position: relative;
-  padding: 0.5em;
-  padding-left: 4em;
-  max-width: calc(100% - 2em);
-}
-.toggles [type=checkbox] + label::before, .toggles [type=checkbox] + label::after {
-  content: "";
-  position: absolute;
-  height: 1.5em;
-  transition: all 0.25s ease;
-}
-@media screen and (prefers-reduced-motion: reduce) {
-  .toggles [type=checkbox] + label::before, .toggles [type=checkbox] + label::after {
-    transition: none;
-  }
-}
-.toggles [type=checkbox] + label::before {
-  left: 0;
-  top: 0.2em;
-  width: 3em;
-  border: 0.2em solid #767676;
-  background: #767676;
-  border-radius: 1.1em;
-}
-.toggles [type=checkbox] + label::after {
-  left: 0;
-  top: 0.25em;
-  background-color: #fff;
-  background-position: center center;
-  border-radius: 50%;
-  width: 1.5em;
-  border: 0.15em solid #767676;
-}
-.toggles [type=checkbox]:checked + label::after {
-  left: 1.6em;
-  border-color: #36a829;
-  color: #36a829;
-}
-.toggles [type=checkbox]:focus + label, .toggles [type=checkbox]:hover + label {
-  color: #00f;
-}
-.toggles [type=checkbox]:focus + label::before, .toggles [type=checkbox]:hover + label::before {
-  box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.5);
-}
-.toggles [type=checkbox]:focus + label::after, .toggles [type=checkbox]:hover + label::after {
-  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='50' cy='50' r='50' fill='rgba(0,0,0,.25)'/%3E%3C/svg%3E");
-  background-size: 30%;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-.toggles [type=checkbox][disabled] + label::before {
-  background-color: transparent;
-  border-color: #ddd;
-}
-.toggles [type=checkbox][disabled] + label::after {
-  border-color: #ddd;
-}
-.toggles [type=checkbox][disabled]:hover + label::before {
-  box-shadow: none;
-}
-.toggles [type=checkbox][disabled]:hover + label::after {
-  background-image: none;
-}
-
 *,
 *::before,
 *::after {
@@ -73,7 +7,13 @@
 }
 
 :root {
-  --fondPage:hsl(45, 21%, 93%);
+  --fondPage: hsl(45, 21%, 93%);
+  --clr-1: fuchsia;
+  --clr-2: limegreen;
+  --rad: 0.4rem;
+  --rayon-knob: 1.2rem;
+  --angleRotation: 20deg;
+  --bsh: 0px 0px 2px rgba(0, 0, 0, .5);
 }
 
 html {
@@ -83,29 +23,173 @@ html {
 body {
   background-color: var(--fondPage);
   min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  place-content: center;
 }
 
-img {
+main {
+  width: 60vw;
+  display: grid;
+  row-gap: 1.6em;
+  padding: 2rem;
+  background-color: #fff;
+  border-radius: 0.5rem;
+}
+
+label,
+button {
+  cursor: pointer;
+}
+
+.col {
+  display: grid;
+  grid-template-columns: 1fr 12ch;
+}
+.col label {
+  grid-area: 1/1/2/3;
+  font-family: sans-serif;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: var(--clr-1);
+  text-transform: uppercase;
+}
+.col input[type=text] {
+  grid-area: 2/1/3/2;
+  border-right-width: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.col button {
+  grid-area: 2/2/3/3;
+  appearance: none;
+  border: 0;
+  border-top-right-radius: var(--rad);
+  border-bottom-right-radius: var(--rad);
+  background-color: var(--clr-1);
+  font-family: sans-serif;
+  font-size: 2rem;
+  color: #fff;
+}
+
+input[type=text] {
+  appearance: none;
+  padding: 0.25rem 0.5rem;
+  border-style: solid;
+  border-width: 1px;
+  border-color: var(--clr-1);
+  border-radius: var(--rad);
+  font-family: "JetBrains Mono", monospace;
+  font-size: 2rem;
+  line-height: 1;
+  color: var(--clr-1);
+}
+input[type=text]:focus {
+  outline: 0;
+  box-shadow: 0 0 8px rebeccapurple;
+}
+
+.knob_wrap {
+  display: grid;
+  grid-template-columns: 2.4rem 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 1em;
+}
+
+.checkbox {
+  position: absolute;
+  left: -100vw;
+}
+
+.knob {
+  grid-area: 1/1/3/2;
+  display: grid;
+  place-content: center;
+  z-index: 1;
+}
+.knob label {
+  width: 2.4rem;
+  height: 2.4rem;
+  position: relative;
+  background-color: var(--clr-2);
+  border-radius: 50%;
+}
+.knob label::before, .knob label::after {
+  content: "";
+  position: absolute;
+  transition: transform 0.25s ease-in-out;
+}
+.knob label::before {
+  --haut: 2px;
+  width: var(--rayon-knob);
+  height: var(--haut);
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) rotate(var(--angleRotation));
+  transform-origin: 0 50%;
+  border-radius: calc(var(--haut) / 2);
+  background-color: rgba(255, 255, 255, 0.45);
+}
+.knob label::after {
+  width: 0;
+  height: 0;
+  top: 50%;
+  left: calc(50% + 0.8485281374rem);
+  transform-origin: -0.8485281374rem 50%;
+  border-style: solid;
+  border-width: 0.8485281374rem 0 0.8485281374rem 0.8485281374rem;
+  border-color: transparent transparent transparent var(--clr-2);
+  transform: translateY(-50%) rotate(var(--angleRotation));
+  z-index: -1;
+}
+.knob .checkbox:checked ~ label {
+  background-color: var(--clr-1);
+}
+.knob .checkbox:checked ~ label::before, .knob .checkbox:checked ~ label::after {
+  transform: translatey(-50%) rotate(calc(var(--angleRotation) * -1));
+}
+.knob .checkbox:checked ~ label::after {
+  border-color: transparent transparent transparent var(--clr-1);
+}
+
+.choice {
+  justify-self: start;
+  align-self: center;
+  font-family: sans-serif;
+  font-size: 1.2rem;
+  color: var(--clr-1);
+}
+.choice ~ .choice {
+  color: var(--clr-2);
+}
+.choice.disabled {
+  color: #a7a7a7;
+}
+
+.toggle label {
+  --w: 4.2rem;
+  --h: 2rem;
+  --m: .2rem;
   display: block;
-  max-width: 100%;
+  position: relative;
+  width: var(--w);
+  height: var(--h);
+  border-radius: calc(var(--h) / 2);
+  background-color: var(--clr-1);
+  transition: background-color 0.25s linear;
+  box-shadow: var(--bsh) inset;
 }
-
-ul,
-nav ul {
-  list-style-type: none;
+.toggle label::before {
+  content: "";
+  position: absolute;
+  width: calc(var(--h) - (var(--m) * 2));
+  height: calc(var(--h) - (var(--m) * 2));
+  border-radius: 50%;
+  background: var(--clr-2);
+  top: var(--m);
+  left: var(--m);
+  box-shadow: var(--bsh);
+  transition: left 0.125s linear, background-color 0.125s linear;
 }
-
-ul a {
-  text-decoration: none;
-  display: inline-block;
-}
-
-#clr-sample {
-  width: 6rem;
-  height: 6rem;
-  border: 1px solid red;
-  background-color: inherit;
+.toggle input:checked + label::before {
+  left: calc(var(--w) - ((var(--h) - var(--m))));
 }
