--- a/css/sty.css
+++ b/css/sty.css
@@ -70,6 +70,13 @@ button {
   font-family: sans-serif;
   font-size: 2rem;
   color: #fff;
+  transition: background-color 0.125s ease-in-out;
+}
+.col button:hover {
+  background-color: #990099;
+}
+.col button.copied {
+  background-color: var(--clr-2);
 }
 
 input[type=text] {
