--- a/scss/sty.scss
+++ b/scss/sty.scss
@@ -1,8 +1,11 @@
+@use "sass:color";
 @import 'mixins';
 //@import 'switches';
 $angleTriangle: 90deg;
 $angleRotation: 20deg;
 $rayon: 1.2rem;
+$clr-1: hsl(300, 100%, 50%);
+$clr-2: hsl(120, 61%, 50%);
 
 
 *,
@@ -15,8 +18,8 @@ $rayon: 1.2rem;
 
 :root {
   --fondPage: hsl(45, 21%, 93%);
-  --clr-1: fuchsia;
-  --clr-2: limegreen;
+  --clr-1: #{$clr-1};
+  --clr-2: #{$clr-2};
   --clr-grey: 0, 0%, 40%;
   --rad: 0.4rem;
 
@@ -81,6 +84,15 @@ button {
     font-family: sans-serif;
     font-size: 2rem;
     color: #fff;
+    transition: background-color .125s ease-in-out;
+
+    &:hover{
+      background-color: color.scale($clr-1, $lightness: -40%);
+    }
+
+    &.copied{
+      background-color: var(--clr-2);
+    }
   }
 }
 
