--- a/css/sty.css
+++ b/css/sty.css
@@ -49,7 +49,7 @@ button {
 }
 
 #errorMessage {
-  --bdr: 2px;
+  --bdr: 1px;
   --h: .6em;
   --clr-bdr: red;
   --bgc: #fff;
@@ -60,6 +60,12 @@ button {
   border: var(--bdr) solid var(--clr-bdr);
   border-radius: 0.5em;
   background-color: var(--bgc);
+  filter: drop-shadow(0 0 4px var(--clr-bdr));
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+#errorMessage.visible {
+  opacity: 1;
 }
 #errorMessage::before, #errorMessage::after {
   position: absolute;
@@ -79,11 +85,11 @@ button {
   border-color: transparent transparent var(--bgc) transparent;
 }
 #errorMessage span {
-  color: red;
-  font-weight: 900;
-}
-#errorMessage span::before, #errorMessage span::after {
-  content: '"';
+  padding: 0.125em 0.25em;
+  font-family: monospace;
+  color: #fff;
+  background-color: var(--clr-1);
+  border-radius: 0.25em;
 }
 
 .col {
