--- a/css/sty.css
+++ b/css/sty.css
@@ -15,10 +15,12 @@
   --rayon-knob: 1.2rem;
   --angleRotation: 20deg;
   --bsh: 0px 0px 2px rgba(0, 0, 0, .5);
+  --transition-error: .25s ease-in-out;
 }
 
 html {
   font-size: 16px;
+  font-family: sans-serif;
 }
 
 body {
@@ -37,6 +39,13 @@ main {
   border-radius: 0.5rem;
   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.25);
 }
+main.error #leHex {
+  margin-top: 4rem;
+}
+main.error #errorMessage {
+  opacity: 1;
+  top: -3rem;
+}
 
 label,
 button {
@@ -48,24 +57,34 @@ button {
   left: -100vw;
 }
 
+#errorMessage,
+#leHex {
+  grid-area: 2/1;
+}
+
+#leHex {
+  margin-top: 0;
+  z-index: 10;
+  transition: margin-top var(--transition-error);
+}
+
 #errorMessage {
-  --bdr: 1px;
+  --bdr: 2px;
   --h: .6em;
   --clr-bdr: red;
   --bgc: #fff;
   width: max(40ch, 50%);
+  position: relative;
+  top: 0;
   padding: 1em;
   margin: auto;
-  position: relative;
   border: var(--bdr) solid var(--clr-bdr);
   border-radius: 0.5em;
   background-color: var(--bgc);
   filter: drop-shadow(0 0 4px var(--clr-bdr));
   opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-}
-#errorMessage.visible {
-  opacity: 1;
+  z-index: 1;
+  transition: opacity var(--transition-error), top var(--transition-error);
 }
 #errorMessage::before, #errorMessage::after {
   position: absolute;
@@ -104,14 +123,9 @@ button {
   color: var(--clr-1);
   text-transform: uppercase;
 }
-.col input[type=text] {
-  grid-area: 2/1/3/2;
-  border-right-width: 0;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-}
 .col button {
   grid-area: 2/2/3/3;
+  -webkit-appearance: none;
   appearance: none;
   border: 0;
   border-top-right-radius: var(--rad);
@@ -130,20 +144,39 @@ button {
 }
 
 input[type=text] {
+  grid-area: 2/1/3/2;
+  -webkit-appearance: none;
   appearance: none;
   padding: 0.25rem 0.5rem;
-  border-style: solid;
-  border-width: 1px;
-  border-color: var(--clr-1);
-  border-radius: var(--rad);
   font-family: "JetBrains Mono", monospace;
   font-size: 2rem;
   line-height: 1;
   color: var(--clr-1);
+  border-style: solid;
+  border-width: 1px;
+  border-color: var(--clr-1);
+  border-radius: var(--rad);
+  border-right-width: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
 }
 input[type=text]:focus {
+  font-size: 2rem;
   outline: 0;
   box-shadow: 0 0 8px rebeccapurple;
+}
+
+#settings {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1.5em;
+  background-color: #d1cfc7;
+  padding: 1em;
+}
+#settings .ligne {
+  display: grid;
+  grid-template-columns: auto auto;
+  align-items: center;
 }
 
 .knob_wrap {
