--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -23,7 +23,7 @@
     place-content: center;
 }
 
-// Pour les knobs
+// Pour les knobs :
 /// Triangle "tangent" au cercle de rayon $rayon pointant vers la droite
 @mixin triangle($rayon, $angle, $couleur: red){
     $angle: math.clamp(20deg, $angle, 140deg); // limite l'angle à un intervalle raisonnable
