--- a/css/sty.css
+++ b/css/sty.css
@@ -1,9 +1,18 @@
+/*
+------ Media queries
+
+Usage : @include mq('max', $tablet) {...}
+            => @media (max-width: 768px) { ... }
+    ou 
+        @include mq($phone, $tablet) {...}
+            => @media (min-width: 480px) and (max-width: 768px) { ... }
+*/
 *,
 *::before,
 *::after {
   margin: 0;
   padding: 0;
-  box-sizing: content-box;
+  box-sizing: border-box;
 }
 
 :root {
@@ -168,20 +177,33 @@ input[type=text]:focus {
 
 #settings {
   display: grid;
-  grid-template: 1fr 1fr/1fr 1fr;
-  grid-auto-flow: column;
+  grid-template: auto/1fr;
+  grid-auto-flow: row;
   row-gap: 1em;
+  justify-items: center;
   column-gap: 2em;
+  width: clamp(480px, 100vw, 800px);
   left: 50%;
   transform: translateX(-50%);
   background-color: #d1cfc7;
-  padding: 1em;
+  padding: 4rem 2em;
+}
+@media (min-width: 768px) {
+  #settings {
+    grid-template: 1fr 1fr/1fr 1fr;
+    grid-auto-flow: column;
+    row-gap: 2em;
+  }
 }
 #settings .ligne {
+  width: calc(100% - 4em);
   display: grid;
-  grid-template-columns: 1fr 7rem;
+  grid-template-columns: 1fr 8rem;
   align-items: center;
   gap: 1em;
+}
+#settings .ligne > * + * {
+  justify-self: end;
 }
 #settings .ligne span {
   font-size: 0.875em;
@@ -214,7 +236,7 @@ input[type=text]:focus {
   transition: transform 0.25s ease-in-out;
 }
 .knob label::before {
-  --haut: 2px;
+  --haut: 4px;
   width: var(--rayon-knob);
   height: var(--haut);
   top: 50%;
@@ -250,7 +272,6 @@ input[type=text]:focus {
   justify-self: start;
   align-self: center;
   font-family: sans-serif;
-  font-size: 1.2rem;
   color: var(--clr-1);
 }
 .choice.disabled {
@@ -310,13 +331,27 @@ input[type=text]:focus {
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
-  background-color: #cacaca;
+  background-color: hsl(var(--clr-grey));
   background-image: url('data:image/svg+xml;utf8,<svg enable-background="new 0 0 24 24" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="m0 0h24v24h-24z" fill="none"/><path d="m19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22l-1.91 3.32c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61zm-7.14 2.66c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"/></svg>');
   background-repeat: no-repeat;
   background-size: cover;
   cursor: pointer;
 }
+#cog::after {
+  --offset: -6px;
+  content: "";
+  position: absolute;
+  top: var(--offset);
+  left: var(--offset);
+  right: var(--offset);
+  bottom: var(--offset);
+  border: calc(var(--offset) / -2) solid hsl(var(--clr-grey));
+  border-radius: inherit;
+}
 #cog:hover {
   background-color: var(--clr-1);
+}
+#cog:hover::after {
+  border-color: var(--clr-1);
 }
 /*# sourceMappingURL=sty.css.map */
