--- a/css/sty.css
+++ b/css/sty.css
@@ -28,19 +28,40 @@ Usage : @include mq('max', $tablet) {...}
 }
 
 html {
-  font-size: 16px;
   font-family: sans-serif;
+}
+@media (max-width: 480px) {
+  html {
+    font-size: 12px;
+  }
+}
+@media (min-width: 480px) and (max-width: 768px) {
+  html {
+    font-size: 14px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1800px) {
+  html {
+    font-size: 16px;
+  }
+}
+@media (min-width: 1800px) {
+  html {
+    font-size: 18px;
+  }
 }
 
 body {
   background-color: var(--fondPage);
   min-height: 100vh;
+  text-rendering: optimizeLegibility;
   display: grid;
   place-content: center;
 }
 
 main {
-  width: 60vw;
+  width: min(calc(100vw - 2em), 800px);
+  min-width: 345px;
   display: grid;
   row-gap: 1.6em;
   padding: 2rem;
@@ -55,10 +76,23 @@ main.error #errorMessage {
   opacity: 1;
   top: -3rem;
 }
+main.disabled .col label {
+  color: #a982a9;
+}
+main.disabled .col input[type=text] {
+  border-color: #a982a9;
+}
+main.disabled .col button {
+  background-color: #a982a9;
+}
 
 label,
 button {
   cursor: pointer;
+}
+
+:focus:not(:focus-visible) {
+  outline: none;
 }
 
 .checkbox {
@@ -120,9 +154,21 @@ button {
   border-radius: 0.25em;
 }
 
+#leInput {
+  grid-template: auto 1fr/1fr;
+}
+
+#clr-input {
+  width: 80%;
+  margin: 0 auto;
+  border-width: 2px;
+  border-top-right-radius: var(--rad);
+  border-bottom-right-radius: var(--rad);
+}
+
 .col {
   display: grid;
-  grid-template-columns: 1fr 12ch;
+  grid-template-columns: minmax(0, 1fr) auto;
 }
 .col label {
   grid-area: 1/1/2/3;
@@ -136,6 +182,7 @@ button {
   grid-area: 2/2/3/3;
   -webkit-appearance: none;
   appearance: none;
+  padding: 0 0.8rem;
   border: 0;
   border-top-right-radius: var(--rad);
   border-bottom-right-radius: var(--rad);
@@ -150,6 +197,9 @@ button {
 }
 .col button.copied {
   background-color: var(--clr-2);
+}
+.col:focus-within > :not(label) {
+  box-shadow: 0 0 4px 4px green;
 }
 
 input[type=text] {
@@ -172,7 +222,6 @@ input[type=text] {
 input[type=text]:focus {
   font-size: 2rem;
   outline: 0;
-  box-shadow: 0 0 8px rebeccapurple;
 }
 
 #settings {
